--- a/My_site/Templates/base.html
+++ b/My_site/Templates/base.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
-    <h2>This is the index page in application level !!!</h2>
+    <h1>This is HOME PAGE !!</h1>
+
+    {% block content %} 
     
+    {% endblock content %}
   </body>
 </html>
