--- a/My_site/my_app/Templates/my_app/variable.html
+++ b/My_site/my_app/Templates/my_app/variable.html
@@ -1,12 +1,11 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-</head>
-<body>
-    <h1>Variable</h1>
-    <h1>My name is {{ my_name.firstname | lower | capfirst }}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+  <body>
+
+    {% block content %}
+      <h1>Variable</h1>
+      <h1>My name is {{ my_name.firstname | lower | capfirst }}</h1>
+      <img src=" {% static 'my_app/1.jpg' %}" alt="Image not Found" width="400px" height="300px">
+    {% endblock content %}
+    
+
