--- a/My_site/my_app/Templates/my_app/rental_review.html
+++ b/My_site/my_app/Templates/my_app/rental_review.html
@@ -18,6 +18,7 @@
                 {{item.label_tag}}
             </div>
             {{item}}
+            {{item.errors}}
             {% endfor %}
             <input type="submit" value="submit">
         </form>
