--- a/My_site/my_app/Templates/my_app/thank_you.html
+++ b/My_site/my_app/Templates/my_app/thank_you.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>Thank you for submitting your result</h1>
+    <a href="{% url 'my_app:index' %}" >
+      <button type="submit">Home</button>
+    </a>
   </body>
 </html>
